- up libraries, jdk - add Loom examples